# Movie_Recommend

./: .env  README.md  app.py  main.py  pyproject.toml  requirements.txt  tfidf.pkl
